--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -1,4 +1,4 @@
-@media (max-width: 870px) and (min-width: 571px){
+@media (max-width: 870px){
 
   .container.sign-up-mode .signin-signup {
     left: 50%;
